# nn4mc_cpp

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  .readthedocs.yml  CMakeLists.txt  CMakeLists_BACKUP_28084.txt  CMakeLists_REMOTE_28084.txt  LICENSE.md  README.md  a.out  generator_test  generator_test_v2  h5cpp_test  iterator_test  json_test  neural_network.c  neural_network.h  neural_network_params.h  nn_test  parser_test  run  tensor_test
Components/: Layer.h  NeuralNetwork.h  Weights.h
GRU/: dense.h  gru.cpp  gru.h  nn4mc.cpp  nn4mc.h  parameters.h
LSTM/: activations.cpp  dense.cpp  lstm.cpp  lstm.h  nn4mc.cpp  parameters.h
RNN/: lstm.h  nn4mc.cpp  nn4mc.h  parameters.h
class_example/: activation_func.h  neural_network.cpp  neural_network.h  neural_network_params.h
data/: Conv1.hdf5  Conv1d_pooling.hdf5  Conv2.hdf5  GRU.hdf5  IR_regressor.hdf5  LSTM.hdf5  MNIST_keras_CNN.h5  README.md  classifier.hdf5  configurationB.hdf5  conv1d.hdf5  lenet.hdf5  lenet.py  loadModel.py  neural_network_1.hdf5  neural_network_2.hdf5  nn_motion3_reg_weights.best.hdf5  nn_regression.h5  nn_regression.hdf5  nn_regression_att2.hdf5  output  simpleRNN.hdf5  simpleRNNexample.py  testASTfromHDF5.py  we.txt  weights.best.hdf5  wr.txt
data/ISRR_tests/: test1.hdf5  test2.hdf5  test3.hdf5  test4.hdf5  test5.hdf5
docs/: index.rst  installation.rst  usage.rst
docs/source/: conf.py  dev.rst  index.rst  installation.rst  introduction.rst  tutorials.rst
docs_test/: index.rst  tutorials.rst
example_out/: conv1d.cpp  conv1d.h  maxpool2d.cpp  maxpool2d.h  neural_network.cpp  neural_network.h  nn4mc.cpp  nn4mc.h  parameters.h
example_out/include/: neural_network.h  neural_network_params.h
example_out/include/layers/: conv1d.h  conv2d.h  dense.h  input.h  maxpool2d.h
example_out/src/: neural_network.c  neural_network.cpp
example_out/src/layers/: conv1d.cpp  conv2d.cpp  dense.cpp  input.cpp  maxpool2d.cpp
example_usage/: a.out  radhensNN.py  testing.c
example_usage_esp32/: Makefile  _DS_Store  sdkconfig  sdkconfig.old
example_usage_esp32/main/: Kconfig.projbuild  adc_collector.c  adc_collector.h  data_collection_main.c  tcp_perf.c
examples/: .generator_test_actual_file.cpp.swp  Layer.cpp  ONNX_NN4MC.ipynb  Parser.cpp  README.md  \  file_creator_test.cpp  generator_test.cpp  generator_test_actual_file.cpp  generator_test_v2.cpp  h5cpp_test.cpp  iterator_test.cpp  json_test.cpp  layer_builder.cpp  nn_test.cpp  parser_example.cpp  run  tensor_test.cpp
examples/example_usage/: \  testing.c
examples/example_usage_esp32/: sdkconfig.old
examples/example_usage_esp32/main/: adc_collector.c  data_collection_main.c  tcp_perf.c
gareth/: conv1d.cpp  neural_network.cpp  neural_network_params.h
include/: HDF5Parser.h  Layer.h  LayerBuilder.h  LayerFactory.h  Layers.h  NeuralNetwork.h  Parser.h  SmartPtr.h  Weights.h  \  nnIterator.h  tensor.h
include/cget/cget/: cget.cmake
include/datastructures/: Layer.h  NeuralNetwork.h  SmartPtr.h  nnIterator.h  tensor.h  weights.h
include/datastructures/layers/: conv1d.h
include/generator/: code_generator.h  conv1d.h  file_creator.h  layer_generator.h  layer_writer.h  layer_writer_factory.h  neural_network_generator.h  tensor_representation.h  weight_generator.h  weights_generator.h
include/layers/: Conv1D.h  Conv2D.h  Conv2d.h  Dense.h  Flatten.h  GRU.h  LSTM.h  MaxPooling1D.h  MaxPooling2D.h  SimpleRNN.h
include/parser/: HDF5Parser.h  LayerBuilder.h  LayerFactory.h  Parser.h  h5_layer_factory.h  h5_parser.h  h5_parser_exception.h  parser.h  parser_exception.h
lenet/: activation_func.cpp  maxpool2d.cpp
lib/: CMakeLists.txt
lstm/: dense.cpp  lstm.cpp  lstm.h  neural_network.cpp  neural_network.h  neural_network_params.h
mc_code/: neural_network.h  neural_network_params.h
mc_code/flat/: neural_network.h  neural_network_1.c  neural_network_params.h
mc_code/not_flat/: neural_network.c  neural_network.h  neural_network_params.h
post_test/: activation.i  activation.py  activation_wrap.c  conv1d.cpp  conv1d.h  conv2d.cpp  conv2d.h  dense.cpp  example.i  example.py  example_wrap.c  example_wrap.cxx  gru.cpp  gru.h  lstm.cpp  lstm.h  nn4mc.cpp  nn4mc.h  parameters.h
scott/: activation_func.cpp  conv1d.cpp  conv1d.h  dense.cpp  neural_network.cpp  neural_network.h  neural_network_params.h
scripts/: install_hdf5_linux.sh  setup_linux.sh  setup_linux_mint.sh  setup_mac_osx.sh
simpleRNN/: activation_func.h  conv2d.cpp  conv2d.h  dense.h  maxpool2d.cpp  maxpool2d.h  neural_network.cpp  neural_network.h  neural_network_params.h  nn4mc.cpp  nn4mc.h  parameters.h  simplernn.cpp  simplernn.h
src/: HDF5Parser.cpp  HDF5Parser.py  Layer.cpp  LayerBuilder.cpp  NeuralNetwork.cpp  README.md  generator_test.cpp  h5tutr_rdwt.cpp  parserHDf5.cpp  tensor.cpp
src/datastructures/: .weights.cpp.swp  Layer.cpp  NeuralNetwork.cpp  tensor.cpp  weights.cpp
src/datastructures/layers/: conv1d.cpp
src/generator/: .code_generator.cpp.swp  code_generator.cpp  conv1d.cpp  file_creator.cpp  layer_generator.cpp  layer_writer.cpp  neural_network_generator.cpp  tensor_representation.cpp  weight_generator.cpp  weights_generator.cpp
src/hdf5/: README
src/hdf5-1.10.4/: config.lt  config.status  libtool
src/hdf5-1.10.4/examples/: h5_attribute  h5_chunk_read  h5_cmprss  h5_compound  h5_crtatt  h5_crtdat  h5_crtgrp  h5_crtgrpar  h5_crtgrpd  h5_drivers  h5_elink_unix2win  h5_extend  h5_extend_write  h5_extlink  h5_group  h5_mount  h5_rdwt  h5_read  h5_ref2reg  h5_reference  h5_select  h5_shared_mesg  h5_subset  h5_vds  h5_vds-eiger  h5_vds-exc  h5_vds-exclim  h5_vds-percival  h5_vds-percival-unlim  h5_vds-percival-unlim-maxmin  h5_vds-simpleIO  (+2 more)
src/parser/: .h5_parser.cpp.swp  Group.h5  HDF5Parser.cpp  HDF5Parser.py  LayerBuilder.cpp  Parser.cpp  README.md  h5_layer_builder.cpp  h5_parser.cpp
testing_output_files/: setup.py  template_test.py
testing_output_files/code_test/: activations.h  conv1d.cpp  conv1d.h  nn4mc.cpp  nn4mc.h  parameters.h
testing_output_files/src/: activation.i  activation.py  activation_wrap.cxx
unitTest/: a.out  testing.c
(+1456 files in other folders)
